# stuffcounter

./: .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  LICENSE.md  README.rst  TODO.md  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: conf.py  index.rst  requirements.txt
doc/_static/: stuff.css
sphinxcontrib/stuffcounter/: __init__.py
tests/: test_dummy.py
