[metadata]
name = stuffcounter
summary = A sphinx extension to illustrate the `add_enumerable_node()` method.
description-file =
    README.rst
author = Louis Paternault
author-email = spalax+python@gresille.org
home-page = https://framagit.org/spalax/sphinxcontrib-stuffcounter
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Documentation
    Topic :: Utilities
    DO :: NOT :: UPLOAD :: TO :: PYPI

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[wheel]
universal = 1
